# genomi-ancestry-panel

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml
docs/: citations.md  filters.md  math.md  pca_intuition.md
scripts/: build_and_release.sh
src/genomi_ancestry_panel/: __init__.py  builder.py  cli.py  naming.py  source_urls.py
tests/: test_builder.py
